metadata/force-app/main/default/objects/CustomName_hdxeo__c/CustomName_hdxeo__c.object-meta.xml
<CustomObject>
    <description>Description_JyAna</description>
    <label>CustomLabel_lWrhH</label>
    <nameField>
        <label>CustomLabel_lWrhH</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_lWrhHs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>