metadata/force-app/main/default/objects/CustomName_hdxeo__c/fields/CustomField_HBPsu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_HBPsu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldXyTkx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>